CSS Selector: Fix a regression of :first-child and :last-child invalidation

https://codereview.chromium.org/2306323002 caused a regression of :first-child and
:last-child invalidation because the timing of ContainerNode::childrenChanged was
slightly changed for multiple nodes insertion.
 Before: childrenChanged was called on every node insertion
 After: childrenChanged was called after inserting all nodes

This CL changes the definition of ChildrenChanged::siblingBeforeChange and
siblingAfterChange so that they always point existing nodes before insertion
operations. It fixes the behavior of ContainerNode::checkForSiblingStyleChanges,
which is called from Element::childrenChanged and ShadowRoot::childrenChanged.
siblingBeforeChange and siblingAfterChange are used only by
checkForSiblingStyleChanges.  So this definition change is safe.

BUG=702104

Review-Url: https://codereview.chromium.org/2772463004
Cr-Commit-Position: refs/heads/master@{#459023}

Former-commit-id: e89e9ca08e4abca7bf13d7424434b301caf5b4a5